<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~  Copyright © 2025, Alps BTE <bte.atchli@gmail.com>
  ~
  ~  Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  of this software and associated documentation files (the "Software"), to deal
  ~  in the Software without restriction, including without limitation the rights
  ~  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  copies of the Software, and to permit persons to whom the Software is
  ~  furnished to do so, subject to the following conditions:
  ~
  ~  The above copyright notice and this permission notice shall be included in all
  ~  copies or substantial portions of the Software.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  SOFTWARE.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.alpsbte</groupId>
    <artifactId>PlotSystem</artifactId>
    <version>5.0.0</version>

    <repositories>
        <!-- JitPack -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- Paper -->
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!-- AlpsBTE Repo (WorldEdit, WorldGuard, FAWE) -->
        <repository>
            <id>alpsbte-repo</id>
            <url>https://mvn.alps-bte.com/repository/alps-bte/</url>
        </repository>
        <!-- Fancy NPCs -->
        <repository>
            <id>fancyplugins-releases</id>
            <name>FancyPlugins Repository</name>
            <url>https://repo.fancyplugins.de/releases</url>
        </repository>
        <!-- WorldGuard -->
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- Multiverse Core -->
        <repository>
            <id>OnARandomBox</id>
            <url>https://repo.onarandombox.com/content/groups/public/</url>
        </repository>
        <!-- Holographic Displays -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <!-- Protocol Lib -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Fast Async World Edit -->
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Core</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- World Guard -->
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Multiverse Core -->
        <dependency>
            <groupId>com.onarandombox.multiversecore</groupId>
            <artifactId>Multiverse-Core</artifactId>
            <version>4.3.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- ParticleNativeAPI -->
        <dependency>
            <groupId>com.github.fierioziy.particlenativeapi</groupId>
            <artifactId>ParticleNativeAPI-plugin</artifactId>
            <version>3.3.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Canvas Menu Builder -->
        <dependency>
            <groupId>com.alpsbte</groupId>
            <artifactId>canvas</artifactId>
            <version>1.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- HeadDB -->
        <dependency>
            <groupId>com.arcaniax</groupId>
            <artifactId>HeadDatabase-API</artifactId>
            <version>1.3.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Decent Hologram -->
        <dependency>
            <groupId>com.github.decentsoftware-eu</groupId>
            <artifactId>decentholograms</artifactId>
            <version>2.8.12</version>
            <scope>provided</scope>
        </dependency>
        <!-- Alps Utils -->
        <dependency>
            <groupId>com.alpsbte.alpslib</groupId>
            <artifactId>alpslib-io</artifactId>
            <version>1.0.38</version>
        </dependency>
        <dependency>
            <groupId>com.alpsbte.alpslib</groupId>
            <artifactId>alpslib-hologram</artifactId>
            <version>1.1.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.alpsbte.alpslib</groupId>
            <artifactId>alpslib-utils</artifactId>
            <version>1.3.4</version>
            <scope>compile</scope>
        </dependency>
        <!-- MariaDB Connector -->
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>2.7.4</version>
            <scope>compile</scope>
        </dependency>
        <!-- Hikari-CP (MariaDB) -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- Apache Commons Net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.11.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- JSCH -->
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
            <scope>compile</scope>
        </dependency>
        <!-- Protocol Lib -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.1.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Fancy NPCs -->
        <dependency>
            <groupId>de.oliver</groupId>
            <artifactId>FancyNpcs</artifactId>
            <version>2.4.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>li.cinnazeyy</groupId>
            <artifactId>LangLibs</artifactId>
            <version>1.5</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <!-- Fast Async World Edit -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.intellectualsites.bom</groupId>
                <artifactId>bom-newest</artifactId>
                <version>1.51</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <!-- Plugin Build Settings -->
    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <targetPath>./lang</targetPath>
                <directory>${basedir}/src/main/resources/lang</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <targetPath>./tutorial</targetPath>
                <directory>${basedir}/src/main/resources/tutorial</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <targetPath>./tutorial/schematics</targetPath>
                <directory>${basedir}/src/main/resources/tutorial/schematics</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
        <!-- IMPORTANT: Plugin Building Path -->
        <sourceDirectory>src/main/java/</sourceDirectory>
        <!-- IMPORTANT: Output File Name -->
        <finalName>${project.artifactId}-${project.version}-${build.number}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/shaded/</outputDirectory>
                    <createDependencyReducedPom>true</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.MF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <build.number/>
        <java.version>21</java.version>
    </properties>
</project>